Feature/performance optimisations (#96)
* feat: Add performance indexes to improve query efficiency on key tables

* feat: Implement Redis caching for improved performance across services

* feat: Optimize repository queries and add projections for improved performance

* feat: Update user summary queries to include userDetails and optimized profile picture URL generation

* feat: Add performance indexes to enhance query efficiency on authentication and comments tables

* feat: Update Redis cache configuration to use module registration for improved serialization

* feat: Update Redis cache configuration to use module registration for improved serialization

* feat: Optimize trip repository queries to prevent N+1 issues by adjusting entity graph loading

* feat: Introduce UserBasicInfo DTO for optimized user lookups and update query client methods to support basic user information retrieval

* feat: Update Redis cache configuration and optimize user lookups with UserBasicInfo DTO

* feat: Refactor email verification tokens indexes to improve clarity and update column names

* feat: Implement asynchronous email sending for verification and password reset

* feat: Update Redis cache version to v1 and enable default typing for object mapper

* feat: Enhance Redis cache configuration by enabling property-based typing for object mapper

* feat: Add promoted status to TripDTO and optimize trip retrieval with promoted trips first

* feat: Extend TripDTO with pre-announced status and countdown start date for enhanced trip management

* feat: Update TripControllerTest and TripServiceTest to use Boolean.TRUE and Boolean.FALSE for boolean values

* feat: Include promoted trips in CREATED status for ongoing public trips retrieval

* Spotless

* feat: Enhance TripDTO enrichment with username and promoted status

* feat: Optimize TripDTO creation by introducing pre-announced status check

* feat: Update promoted trip retrieval method to use tripId for improved accuracy

* feat: A